# ShadowDL_V2-Release

./: .editorconfig  .gitattributes  .gitignore  DEVELOPMENT.md  README.md  ShadowDL.spec  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: build.ps1  prepare-runtime.ps1  test.ps1
src/shadowdl/: __init__.py  __main__.py  app.py  command.py  config.py  paths.py  process.py
tests/: test_command.py  test_config.py  test_paths.py
